--- a/about-me.html
+++ b/about-me.html
@@ -47,8 +47,8 @@
             </div>
         </div>
 
-         <!--------------------------------------------------------------Burger Menu-->
-         <div class="burger__menu">
+           <!--------------------------------------------------------------Burger Menu-->
+           <div class="burger__menu">
             <div class="nav">
                 <button class="burger__btn" type="button">
                     <span class="burger__btn--line top"></span>
@@ -58,17 +58,17 @@
             </div>
             <div class="burger__hidden hideNav hidden">
                 <ul class="burger__links">
-                    <li class="burger__links--item"><a href="about-me.html" class="burger__links--anchor"><span>About Me</span></a></li>
-                    <li class="burger__links--item"><a href="index.html#projects" class="burger__links--anchor"><span>My Portfolio</span></a></li>
-                    <li class="burger__links--item"><a href="coding-examples.html" class="burger__links--anchor"><span>Coding Examples</span></a></li>
-                    <li class="burger__links--item"><a href="scs-scheme.html" class="burger__links--anchor"><span>SCS Scheme</span></a></li>
-                    <li class="burger__links--item"><a href="index.html#contact" class="burger__links--anchor"><span>Contact Me</span></a></li>
+                    <li class="burger__links item"><a href="about-me.html" class="burger__links--anchor"><span>About Me</span></a></li>
+                    <li class="burger__links item"><a href="index.html#projects" class="burger__links--anchor"><span>My Portfolio</span></a></li>
+                    <li class="burger__links item"><a href="coding-examples.html" class="burger__links--anchor"><span>Coding Examples</span></a></li>
+                    <li class="burger__links item"><a href="scs-scheme.html" class="burger__links--anchor"><span>SCS Scheme</span></a></li>
+                    <li class="burger__links item"><a href="index.html#contact" class="burger__links--anchor"><span>Contact Me</span></a></li>
                 </ul>
 
                 <ul class="burger__socials">
-                    <li class="burger__socials--item"><a href="https://www.linkedin.com/in/matt-dean-29263055/" class="burger__socials--anchor"><i class="fa-brands fa-linkedin"></i></a></li>
-                    <li class="burger__socials--item"><a href="https://github.com/MattJDean" class="burger__socials--anchor"><i class="fa-brands fa-github"></i></a></li>
-                    <li class="burger__socials--item"><a href="https://mattdean.tech/" class="burger__socials--anchor"><i class="fa-solid fa-globe"></i></a></li>
+                    <li class="burger__socials item"><a href="https://www.linkedin.com/in/matt-dean-29263055/" class="burger__socials--anchor"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li class="burger__socials item"><a href="https://github.com/MattJDean" class="burger__socials--anchor"><i class="fa-brands fa-github"></i></a></li>
+                    <li class="burger__socials item"><a href="https://mattdean.tech/" class="burger__socials--anchor"><i class="fa-solid fa-globe"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -90,9 +90,9 @@
                     <!--------------------------------------------------------------About Me Text-->
             <section class="text">        
                     <div class="about__text">
-                            <p>I'm a web developer-in-training based in Essex, UK. I'm enthusiastic and passionate about the ever-evolving  solutions tech brings us and the possibilities it inspires. </p>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, dolorum eveniet blanditiis corrupti totam, alias nobis accusamus accusantium enim illum expedita est aliquam magni quaerat excepturi sapiente, amet qui. Natus?</p>
-                            <p>Away from the screen, I'm a guitarist, a reader and a keen traveller. </p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, corporis!</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, similique?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, aut!</p>
                             <i class="html"></i>
                             <i class="html"></i>
                             <i class="html"></i>
