--- a/coding-examples.html
+++ b/coding-examples.html
@@ -12,13 +12,35 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
         <script src="https://kit.fontawesome.com/ee55ddb165.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
 <body>
 
 
         <!--------------------------------------------------------------Burger Menu-->
-        <div class="menu__burger">
-            <i class="fa-solid fa-bars"></i>
+        <div class="burger__menu">
+            <div class="nav">
+                <button class="burger__btn" type="button">
+                    <span class="burger__btn--line top"></span>
+                    <span class="burger__btn--line middle"></span>
+                    <span class="burger__btn--line bottom"></span>  
+                </button>
+            </div>
+            <div class="burger__hidden hideNav hidden">
+                <ul class="burger__links">
+                    <li class="burger__links item"><a href="about-me.html" class="burger__links--anchor"><span>About Me</span></a></li>
+                    <li class="burger__links item"><a href="index.html#projects" class="burger__links--anchor"><span>My Portfolio</span></a></li>
+                    <li class="burger__links item"><a href="coding-examples.html" class="burger__links--anchor"><span>Coding Examples</span></a></li>
+                    <li class="burger__links item"><a href="scs-scheme.html" class="burger__links--anchor"><span>SCS Scheme</span></a></li>
+                    <li class="burger__links item"><a href="index.html#contact" class="burger__links--anchor"><span>Contact Me</span></a></li>
+                </ul>
+
+                <ul class="burger__socials">
+                    <li class="burger__socials item"><a href="https://www.linkedin.com/in/matt-dean-29263055/" class="burger__socials--anchor"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li class="burger__socials item"><a href="https://github.com/MattJDean" class="burger__socials--anchor"><i class="fa-brands fa-github"></i></a></li>
+                    <li class="burger__socials item"><a href="https://mattdean.tech/" class="burger__socials--anchor"><i class="fa-solid fa-globe"></i></a></li>
+                </ul>
+            </div>
         </div>
    
         <!---------------------------Side Menu-->
