Project Page and Code Examples Update.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div id="projects-xs" class="project__container--xs">
             <h3><span>My Projects</h3></span> 
             
-            <div class="project__card--1"><span>Coming Soon</span></div>
+            <a href="https://matthew-dean.netmatters-scs.co.uk/Netmatters-Homepage/" class="project__card--1" target="_blank" rel="noopener noreferrer" aria-label="Navigate to project"><span>Netmatters Homepage</span></a>
             <div class="project__card--2"><span>Coming Soon</span></div>
             <div class="project__card--3"><span>Coming Soon</span></div>
             <div class="project__card--4"><span>Coming Soon</span></div>
@@ -195,7 +195,7 @@
             <div class="project__background--md"></div>
             <h3><span>My Projects</span></h3> 
 
-            <div class="project__card--1"><span>Coming Soon</span></div>
+            <a href="https://matthew-dean.netmatters-scs.co.uk/Netmatters-Homepage" class="project__card--1" target="_blank" rel="noopener noreferrer" aria-label="Navigate to project"><span>Netmatters Homepage</span></a>
             <div class="project__card--2"><span>Coming Soon</span></div>
             <div class="project__card--3"><span>Coming Soon</span></div>
             <div class="project__card--4"><span>Coming Soon</span></div>
