asset paths fix

--- a/about-me.html
+++ b/about-me.html
@@ -78,7 +78,7 @@
             <section class="image">
                     <!--------------------------------------------------------------About Me Image-->
                     <div class="about__header">
-                        <div class="about__header--img"><img src="/assets/img/about-me.png"></div>
+                        <div class="about__header--img"><img src="../assets/img/about-me.png"></div>
                     </div>
 
                     <!--------------------------------------------------------------About Me Headline-->
@@ -108,7 +108,7 @@
         </div>
 
         <footer>
-            <span class="footer__licence">&copy; 2024 Matt Dean.</span>
+            &copy; 2024 Matt Dean.
         </footer>
       
     
