--- a/coding-examples.html
+++ b/coding-examples.html
@@ -81,7 +81,7 @@
                 <h3 class="example__title"><span>Sticky Header</span></h3>
 
                 <div class="example__image">
-                    <img src="/assets/img/sticky-header-js-code.png" alt="Sticky Header Code" class="expandable-image" />
+                    <img src="../assets/img/sticky-header-js-code.png" alt="Sticky Header Code" class="expandable-image" />
                 </div>
 
                 <h4 class="example__caption"><span>Sticky header for the Netmatters Homepage written in JavaScript</span></h4> 
@@ -91,7 +91,7 @@
                 <h3 class="example__title"><span>Sidebar Menu</span></h3>
 
                 <div class="example__image">
-                    <img src="/assets/img/sidebar-js-code.png" alt="Sidebar Menu Code" class="expandable-image" />
+                    <img src="../assets/img/sidebar-js-code.png" alt="Sidebar Menu Code" class="expandable-image" />
                 </div>
 
                 <h4 class="example__caption"><span>Sidebar menu for the Netmatters Homepage written in JavaScript</span></h4> 
