--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
     <!--------------------------------------------------------Footer Licence-->     
     <footer>
-        <div class="footer__licence">&copy; 2024 Matt Dean.</div>
+        &copy; 2024 Matt Dean.
     </footer> 
    
 
