asset paths fix

--- a/about-me.html
+++ b/about-me.html
@@ -78,7 +78,7 @@
             <section class="image">
                     <!--------------------------------------------------------------About Me Image-->
                     <div class="about__header">
-                        <div class="about__header--img"><img src="../assets/img/about-me.png"></div>
+                        <div class="about__header--img"><img src='../assets/img/about-me.png'></div>
                     </div>
 
                     <!--------------------------------------------------------------About Me Headline-->
@@ -102,7 +102,7 @@
                             <i class="html"></i>
                     </div>
                     <div class="about__cta">
-                        <a href="/index.html#contact" class="contact-button">Contact Me</a>
+                        <span><a href="/index.html#contact" class="contact-button">Contact Me</a></span>
                     </div>
             </section>
         </div>
