JS array project added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h3><span>My Projects</h3></span> 
             
             <a href="https://matthew-dean.netmatters-scs.co.uk/Netmatters-Homepage/" class="project__card--1" target="_blank" rel="noopener noreferrer" aria-label="Navigate to project"><span>Netmatters Homepage</span></a>
-            <div class="project__card--2"><span>Coming Soon</span></div>
+            <a href="https://js-array.matthew-dean.netmatters-scs.co.uk/" class="project__card--2" target="_blank" rel="noopener noreferrer" aria-label="Navigate to project"><span>ImageVault</span></a>
             <div class="project__card--3"><span>Coming Soon</span></div>
             <div class="project__card--4"><span>Coming Soon</span></div>
             <div class="project__card--5"><span>Coming Soon</span></div>
@@ -196,7 +196,7 @@
             <h3><span>My Projects</span></h3> 
 
             <a href="https://matthew-dean.netmatters-scs.co.uk/Netmatters-Homepage" class="project__card--1" target="_blank" rel="noopener noreferrer" aria-label="Navigate to project"><span>Netmatters Homepage</span></a>
-            <div class="project__card--2"><span>Coming Soon</span></div>
+            <a href="https://js-array.matthew-dean.netmatters-scs.co.uk/" class="project__card--2" target="_blank" rel="noopener noreferrer" aria-label="Navigate to project"><span>ImageVault</span></a>
             <div class="project__card--3"><span>Coming Soon</span></div>
             <div class="project__card--4"><span>Coming Soon</span></div>
             <div class="project__card--5"><span>Coming Soon</span></div>
